--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body><noscript>У вас отключен JavaScript. Это пугает.</noscript>
   <div class="page__inner">
     <div class="page__content">
-      <header class="header"><a class="header__logo-link" href="/"><img class="header__logo-img" src="/img/logo.png" alt="Pizza Logo"></a>
+      <header class="header"><a class="header__logo-link" href="/"><img class="header__logo-img" src="img/logo.png" alt="Pizza Logo"></a>
         <nav class="main-nav">
           <ul class="main-nav__list">
             <li class="main-nav__item"><a class="main-nav__link" href="#">Newsletter</a></li>
@@ -43,7 +43,7 @@
           <div class="banner__text-wrapper">
             <h2 class="banner__title">Create Your Own Pizza</h2>
             <p class="banner__text">Lorem Ipsum is simply dummy text of&nbsp;the&nbsp;printing and&nbsp;typesetting industry. Lorem Ipsum has been the&nbsp;industry's standard dummy since the&nbsp;1500s.</p><a class="banner__read-more-btn" href="#">Read more</a>
-          </div><img class="banner__img" src="/img/pizza.png" alt="Create Your Own Pizza">
+          </div><img class="banner__img" src="img/pizza.png" alt="Create Your Own Pizza">
         </section>
         <section class="progress">
           <h2 class="progress__title">HOW TO PROGRESS?</h2>
